[project]
name = "questionnaire"
version = "0.1.0"
description = ""
authors = [
    {name = "Timothee Corlay",email = "timothee.corlay@grenoble-inp.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
